- Fixed horizontal scroll appeared in some cases. See #2258071 for more info.

--- a/css/style.css
+++ b/css/style.css
@@ -1107,6 +1107,7 @@ div.breadcrumb a:hover {
 
 #overlay-titlebar {
   padding: 0;
+  white-space: normal;
 }
 
 h1#overlay-title {
